# ioc-ci-cd

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PROJECT_SPEC.md  README.md  TODO.md  WORKFLOW.md  action.yml  pyproject.toml
.github/workflows/: deploy.yml  validate.yml
docs/: local-testing-setup.md
iocs/: indicators.txt  master-indicators.csv
src/: __init__.py  cli.py  config.py  logging_setup.py  models.py  parser.py  rate_limiter.py
src/enrichment/: __init__.py  abuseipdb.py  aggregator.py  base.py  otx.py  virustotal.py
src/publishers/: __init__.py  base.py  elastic.py  misp.py  opencti.py  splunk.py
src/reporting/: __init__.py  pr_comment.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_models.py  test_parser.py  test_rate_limiter.py
tests/test_enrichment/: __init__.py  test_abuseipdb.py  test_aggregator.py  test_enrich_all.py  test_otx.py  test_virustotal.py
tests/test_publishers/: __init__.py  test_elastic.py  test_misp.py  test_opencti.py  test_splunk.py
tests/test_reporting/: test_pr_comment.py
