[project]
name = "ioc-cicd-pipeline"
version = "0.1.0"
description = "GitHub Action CI/CD pipeline for IOC validation and deployment"
requires-python = ">=3.12"
dependencies = [
    "validators>=0.22",
    "vt-py>=0.18",
    "OTXv2>=1.5.12",
    "pymisp>=2.5.17",
    "pycti>=6.0.0",
    "stix2>=3.0",
    "aiohttp>=3.9",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
